# factorio_script_extender

./: .gitmodules  CMakeLists.txt  README.md
include/lua-headers-master/csrc/lua-headers/: WHAT  lualib.h
injector/: injector_main.c  injector_main.h
lua_hook/: console_helpers.c  console_helpers.h  extension_functions.c  extension_functions.h  hooked_functions.c  hooked_functions.h  library.c  library.h  log_extensions.h  main_includes.h  resolved_functions.c  resolved_functions.h  thread_helpers.c  thread_helpers.h  typedefs.h
